feat: melhorias apontadas no code review